--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
   <body>
     <script type="text/javascript">
 
+    var game = null;
+
     window.onload = function() {
 
-        var game = new Phaser.Game(window.innerWidth, window.innerHeight, Phaser.AUTO, '', { preload: preload, create: create });
+        game = new Phaser.Game(window.innerWidth, window.innerHeight, Phaser.AUTO, '', { preload: preload, create: create });
 
         function preload () {
 
@@ -23,6 +25,7 @@
 
             var logo = game.add.sprite(game.world.centerX, game.world.centerY, 'logo');
             logo.anchor.setTo(0.5, 0.5);
+            game.add.sprite(0, 0, 'logo');
 
         }
 
