--- a/index.html
+++ b/index.html
@@ -3,30 +3,10 @@
   <head>
     <meta charset="utf-8">
     <script type="text/javascript" src="js/phaser.js"></script>
+    <script type="text/javascript" src="js/game.js"></script>
     <title>Phaser</title>
     <link rel="stylesheet" href="/css/master.css" media="screen" title="no title" charset="utf-8">
   </head>
   <body>
-    <script type="text/javascript">
-
-    var game = null;
-
-    window.onload = function() {
-
-        game = new Phaser.Game(window.innerWidth, window.innerHeight, Phaser.AUTO, '', { preload: preload, create: create });
-
-        function preload () {
-            game.load.image('logo', 'img/phaser.png');
-        }
-
-        function create () {
-            var logo = game.add.sprite(game.world.centerX, game.world.centerY, 'logo');
-            logo.anchor.setTo(0.5, 0.5);
-            game.add.sprite(0, 0, 'logo');
-        }
-
-    };
-
-    </script>
   </body>
 </html>
