--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script type="text/javascript" src="js/phaser.js"></script>
     <script type="text/javascript" src="js/game.js"></script>
     <title>Phaser</title>
-    <link rel="stylesheet" href="/css/master.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="css/master.css" media="screen" title="no title" charset="utf-8">
   </head>
   <body>
   </body>
